# libsc8815

./: CMakeLists.txt  LICENSE  main.c  sc8815.c  sc8815.h
